--- a/src/app.css
+++ b/src/app.css
@@ -73,7 +73,51 @@
   --sidebar-ring: oklch(0.552 0.016 285.938);
 }
 
+
+
 @theme inline {
+
+  --color-primary-white: #FAFAFA;
+  --color-black: #060D01;
+  --color-gray : #A0A0A0;
+
+
+  /* h2 */
+  --text-h2: 2.25rem;
+  --text-h2--line-height: 100%;
+  --text-h2--letter-spacing: -0.03em;
+  --text-h2--font-weight: 500;
+
+  --text-h2-mobile: 2rem;
+  --text-h2-mobile--line-height: 100%;
+  --text-h2-mobile--letter-spacing: -0.02em;
+  --text-h2-mobile--font-weight: 500;
+
+
+    /* h3 */
+  --text-h3: 1.5rem;
+  --text-h3--line-height: 110%;
+  --text-h3--letter-spacing: -0.02em;
+  --text-h3--font-weight: 500;
+
+  --text-h3-mobile: 1.3rem;
+  --text-h3-mobile--line-height: 110%;
+  --text-h3-mobile--letter-spacing: -0.02em;
+  --text-h3-mobile--font-weight: 500;
+
+  /* h4 */
+  --text-h4: 1.25rem;
+  --text-h4--line-height: 120%;
+  --text-h4--letter-spacing: -0.02em;
+  --text-h4--font-weight: 500;
+
+  --text-h4-mobile: 1.1rem;
+  --text-h4-mobile--line-height: 120%;
+  --text-h4-mobile--letter-spacing: -0.02em;
+  --text-h4-mobile--font-weight: 500;
+
+
+
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -112,10 +156,13 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 1rem;
 }
