--- a/src/app.css
+++ b/src/app.css
@@ -72,8 +72,9 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
 }
-
-
+.font-manrope {
+  font-family : "Manrope", sans-serif;
+}
 
 @theme inline {
 
